--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -4,62 +4,68 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/global.css" />
-    <title>Home</title>
+    <link rel="stylesheet" href="../css/get-started.css" />
+    <script
+      src="https://kit.fontawesome.com/9d69625017.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Get Started</title>
   </head>
   <body>
-    <!---------headeer start------>
+    <!-----header-->
     <header class="header">
       <!----------------nav bar------------->
       <nav class="header__navigation-bar">
-        <a class="travel__site logo" href="./index.html"
+        <a class="travel__site logo" href="../index.html"
           ><h3 class="travel__site text">Travel Site</h3></a
         >
 
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="./index.html">Home</a>
+            <a class="header__menu-item-link" href="#">Stays</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="./pages/hawaii.html"
-              >Hawaii</a
-            >
+            <a class="header__menu-item-link" href="#">Flights</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="./pages/iceland.html"
-              >Iceland</a
-            >
+            <a class="header__menu-item-link" href="#">Cars</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="./pages/greece.html"
-              >Greece</a
-            >
+            <a class="header__menu-item-link" href="#">Packages</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-item-link" href="#">Things to do</a>
           </li>
         </ul>
       </nav>
     </header>
-
-    <!--------------------header end---------------->
     <main>
       <!------------------banner--------------->
       <div class="hero_banner-container">
         <!---------------hero slogan----------->
         <div class="hero__slogan">
-          <h1 class="hero__slogan-text">
-            Travel Comes With Endless Discoveries
-          </h1>
+          <h1 class="hero__slogan-text">Where are you going next?</h1>
 
-          <!-------------slogan paragraph---------->
-          <p class="hero-slogan-paragraph">
-            Don't let your dreams bee just dreams. Experience the world by
-            booking a vacation with us.
-          </p>
+          <div class="destination__container">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <input type="text" placeholder="Destination" />
+          </div>
+
+          <div class="dates__containers">
+            <div class="from__container">
+              <i class="fa-solid fa-calendar-day"></i>
+              <input type="text" placeholder="From" />
+            </div>
+            <div class="to__container">
+              <i class="fa-solid fa-calendar-day"></i>
+              <input type="text" placeholder="To" />
+            </div>
+          </div>
 
           <!----------------get started buttom-------->
           <div class="buttom">
-            <a href="./pages/get-started.html">
-              <button class="button__get-started">Get started</button>
+            <a href="">
+              <button class="button__search">Search</button>
             </a>
           </div>
         </div>
@@ -68,55 +74,11 @@
         <div class="hero__image">
           <img
             class="hero__world-map-img"
-            src="./assets/images/hero.png"
+            src="../assets/images/hero.png"
             alt="world-map"
           />
         </div>
       </div>
-
-      <!----------------------banner end----------------->
-
-      <!-----------------recommendations section----------->
-      <section class="recommendations__container">
-        <div>
-          <h2 class="text-recommendations">Recommendations</h2>
-        </div>
-
-        <div class="cards__container">
-          <div class="card">
-            <a href="./pages/hawaii.html">
-              <img
-                class="card__img"
-                src="./assets/images/hawaii.jpg"
-                alt="Hawaii"
-              />
-              <h3 class="destination-name">Hawaii</h3>
-            </a>
-          </div>
-
-          <div class="card">
-            <a href="./pages/iceland.html">
-              <img
-                class="card__img"
-                src="./assets/images/iceland.jpg"
-                alt="Iceland"
-              />
-              <h3 class="destination-name">Iceland</h3>
-            </a>
-          </div>
-
-          <div class="card">
-            <a href="./pages/greece.html">
-              <img
-                class="card__img"
-                src="./assets/images/greece.jpg"
-                alt="Greece"
-              />
-              <h3 class="destination-name">Greece</h3>
-            </a>
-          </div>
-        </div>
-      </section>
     </main>
 
     <!---------------Footer----------------->
