--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -6,36 +6,72 @@
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/destinations.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hawaii</title>
+    <title>Iceeland</title>
   </head>
-  <body></body>
-</html>
 <!---------headeer start------>
 <header class="header">
-  <!------------------site name------------>
-  <h3 class="header__site-name">Travel Site</h3>
 
-  <!----------------nav bar------------->
-  <nav class="header__navigation-bar">
-    <ul class="header__menu">
+ <nav class="header__navigation-bar">
+
+    <a class="travel__site logo" href="../index.html"
+          ><h3 class="travel__site text">Travel Site</h3></a
+        >
+
+   <ul class="header__menu">
       <li class="header__menu-item">
-        <a class="header__menu-item-link" href="" target="_blank">Home</a>
+        <a class="header__menu-item-link" href="../index.html">Home</a>
       </li>
       <li class="header__menu-item">
-        <a class="header__menu-item-link" href="" target="_blank">Hawaii</a>
+        <a class="header__menu-item-link" href="./hawaii.html">Hawaii</a>
       </li>
       <li class="header__menu-item">
-        <a class="header__menu-item-link" href="" target="_blank">Iceland</a>
+        <a class="header__menu-item-link" href="./iceland.html">Iceland</a>
       </li>
       <li class="header__menu-item">
-        <a class="header__menu-item-link" href="" target="_blank">Greece</a>
+        <a class="header__menu-item-link" href="./greece.html">Greece</a>
       </li>
     </ul>
   </nav>
 </header>
 
 <!--------------------header end---------------->
-<main></main>
+
+<!-------------main---------------------->
+<main> 
+
+    <div class="destination__iceland-container">
+      <div class="destination iceland">
+        <h1>Iceland</h1>
+      </div>
+
+      <div class="cards__container">
+             <ul class="card">
+          <li class="day">Friday</li>
+          <li class="whats__included">Breakfast</li>
+          <li  class="whats__included">Lunch</li>
+          <li  class="whats__included">Dinner</li>
+          <li  class="whats__included">Hiking</li>
+        </ul>
+
+        <ul class="card">
+          <li class="day">Saturday</li>
+          <li class="whats__included">Breakfast</li>
+          <li  class="whats__included">Lunch</li>
+          <li  class="whats__included">Dinner</li>
+          <li  class="whats__included">Hiking</li>
+        </ul>
+
+        <ul class="card">
+          <li class="day">Sunday</li>
+          <li class="whats__included">Breakfast</li>
+          <li  class="whats__included">Lunch</li>
+          <li  class="whats__included">Dinner</li>
+          <li  class="whats__included">Hiking</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+</main>
 
 <!---------------Footer----------------->
 <footer class="footer__container">
@@ -45,41 +81,48 @@
     <p class="info__text">info@travelsite.com</p>
   </div>
 
-  <div class="hours">
+  <div class="opening__hours">
+    <div class="weed-day__hours">
     <h3 class="info__title">Hours</h3>
     <p class="info__detail">MONDAY - FRIDAY</p>
-    <p class="info__text">9 AM - 5 PM</p>
+    <p class="info__text">9:00 AM - 5:00 PM</p>
   </div>
+  
 
   <div class="Weekend__hours">
     <p class="info__detail">SATURDAY</p>
-    <p class="info__text">10 AM - 4 PM</p>
+    <p class="info__text">10:00 AM - 4:00 PM</p>
   </div>
 
   <div class="Weekend__hours">
     <p class="info__detail">SUNDAY</p>
     <p class="info__text">Closed</p>
   </div>
+  </div>
 
   <div class="social">
     <h3 class="info__title">Social</h3>
-    <a href="instagram.com" target="_blank"
+    
+    <div class="icon-container">
+    <a href="http://www.instagram.com" target="_blank"
       ><img
         class="social__media-icon"
-        src="../assets/images/Icons/icon-instagram.png"
+        src="../assets/Icons/icon-instagram.png"
         alt="instagram"
     /></a>
-    <a href="facebook.com" target="_blank"
+    <a href="https://www.facebook.com/" target="_blank"
       ><img
         class="social__media-icon-facebook"
-        src="../assets/images/Icons/icon-facebook.png"
+        src="../assets/Icons/icon-facebook.png"
         alt="facebook"
     /></a>
-    <a href="twitter.com" target="_blank"
+    <a href="https://twitter.com/" target="_blank"
       ><img
         class="social__media-icon"
-        src="../assets/images/Icons/icon-twitter.png"
+        src="../assets/Icons/icon-twitter.png"
         alt="twitter"
     /></a>
   </div>
+  </div>
 </footer>
+</body>
