fixed social icons on home page + weekend hours txt height

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
           <a href="http://www.instagram.com" target="_blank"
             ><img
               class="social__media-icon"
-              src="../assets/Icons/icon-instagram.png"
+              src="./assets/Icons/icon-instagram.png"
               alt="instagram"
           /></a>
           <a href="https://www.facebook.com/" target="_blank"
             ><img
               class="social__media-icon-facebook"
-              src="../assets/Icons/icon-facebook.png"
+              src="./assets/Icons/icon-facebook.png"
               alt="facebook"
           /></a>
           <a href="https://twitter.com/" target="_blank"
             ><img
               class="social__media-icon"
-              src="../assets/Icons/icon-twitter.png"
+              src="./assets/Icons/icon-twitter.png"
               alt="twitter"
           /></a>
         </div>
